test/modules/shadowing/var-shadows-public-use.chpl
module M {
  var x: int;
}

module N {
  public use M;
  var x: int;

  proc main() {
    writeln(x);
  }
}
